apps/todo/todo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cleanup.argocd/example: sync-waves
  name: sync-waves
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
