apps/todo/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cleanup.argocd/example: sync-waves
  name: postgresql
  namespace: sync-waves
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    #argocd.argoproj.io/sync-wave: "3" # falsche reihenfolge um error zu erzeugen
spec:
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: quay.io/redhatdemo/openshift-pgsql12-primary:centos7
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 5432
