apps/todo/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cleanup.argocd/example: sync-waves
  name: postgresql
  namespace: sync-waves
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: postgresql
  ports:
    - name: pgsql
      port: 5432
      targetPort: 5432
